--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!doctype html>
-<html lang="ar" dir="rtl">
+<html lang="fr">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <meta name="description" content="Portfolio d’Amélia Pilou - BTS SIO SLAM">
+    <meta name="author" content="Amélia Pilou">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.rtl.min.css" integrity="sha384-nU14brUcp6StFntEOOEBvcJm4huWjB0OcIeQ3fltAfSmuZFrkAif0T+UtNGlKKQv" crossorigin="anonymous">
 
-    <title>مرحبًا بالعالم!</title>
+    <title>Portfolio de Lucas Rouzies (BTS SIO 2023)</title>
   </head>
   <body>
-    <h1>مرحبًا بالعالم!</h1>
+    <h1>Bonjour et bienvenu sur mon portfolio !</h1>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
