--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Portfolio d’Amélia Pilou - BTS SIO SLAM">
-    <meta name="author" content="Amélia Pilou">
+    <meta name="description" content="Portfolio de Lucas Rouzies - BTS SIO SLAM">
+    <meta name="author" content="Lucas Rouzies">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.rtl.min.css" integrity="sha384-nU14brUcp6StFntEOOEBvcJm4huWjB0OcIeQ3fltAfSmuZFrkAif0T+UtNGlKKQv" crossorigin="anonymous">
 
     <title>Portfolio de Lucas Rouzies (BTS SIO 2023)</title>
+    <link rel="icon" href="favicon.ico">
   </head>
   <body>
     <h1>Bonjour et bienvenu sur mon portfolio!</h1>
