--- a/index.html
+++ b/index.html
@@ -1,29 +1,136 @@
 <!doctype html>
 <html lang="fr">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Portfolio de Lucas Rouzies - BTS SIO SLAM">
-    <meta name="author" content="Lucas Rouzies">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.rtl.min.css" integrity="sha384-nU14brUcp6StFntEOOEBvcJm4huWjB0OcIeQ3fltAfSmuZFrkAif0T+UtNGlKKQv" crossorigin="anonymous">
+    <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Portfolio de Lucas Rouzies - BTS SIO SLAM">
+        <meta name="author" content="Lucas Rouzies">
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.rtl.min.css" integrity="sha384-nU14brUcp6StFntEOOEBvcJm4huWjB0OcIeQ3fltAfSmuZFrkAif0T+UtNGlKKQv" crossorigin="anonymous">
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
-    <title>Portfolio de Lucas Rouzies (BTS SIO 2023)</title>
-    <link rel="icon" href="favicon.ico">
-  </head>
-  <body>
-    <h1>Bonjour et bienvenu sur mon portfolio!</h1>
+        <link rel="icon" href="favicon.ico">
 
-    <!-- Optional JavaScript; choose one of the two! -->
+        <title>Portfolio de Lucas Rouzies (BTS SIO 2023)</title>
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    </head>
+    <body>
+        <nav class="navbar navbar-dark bg-dark fixed-top navbar-expand-md">
+            <div class="container">
+                <button type="button" class="navbar-toggler" data-toggle="collapse"
+                        data-target="#navbar" aria-controls="navbar">
+                    <span class="sr-only">Navigation raccourcie</span>☰
+                </button>
+                <a class="navbar-brand" href="#">Mon portfolio</a>
+                <div id="navbar" class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <ul class="nav navbar-nav">
+                            <li class="active nav-item">
+                                <a href="index.html" class="nav-link">
+                                    <span class="fa fa-home"></span> Accueil
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="cv.html" class="nav-link">
+                                    <span class="fa fa-id-badge"></span> CV
+                                </a>
+                            </li>
+                            <li class="dropdown nav-item">
+                                <a href="#" class="dropdown-toggle nav-link"
+                                   data-toggle="dropdown" role="button">
+                                    <span class="fa fa-list-alt"></span> Réalisations <span class="caret"></span>
+                                </a>
+                                <ul class="dropdown-menu" role="menu">
+                                    <li role="presentation" class="dropdown-header dropdown-item">
+                                        En autonomie</li>
+                                    <li role="presentation" class="dropdown-item">
+                                        <a role="menuitem" href="#">Application Android</a>
+                                    </li>
+                                    <li role="presentation" class="dropdown-item">
+                                        <a role="menuitem" href="#">Site web</a>
+                                    </li>
+                                    <li role="presentation" class="dropdown-item">
+                                        <a role="menuitem" href="#">Études et analyses</a>
+                                    </li>
+                                    <li role="presentation" class="dropdown-divider"></li>
+                                    <li role="presentation" class="dropdown-header dropdown-item">
+                                        En entreprise</li>
+                                    <li role="presentation" class="dropdown-item">
+                                        <a role="menuitem" href="#">Projet de 1ère année</a>
+                                    </li>
+                                    <li role="presentation" class="dropdown-item">
+                                        <a role="menuitem" href="#">Projet de 2ème année</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="dropdown nav-item">
+                                <a href="#" class="dropdown-toggle nav-link"
+                                   data-toggle="dropdown" role="button">
+                                    <span class="fa fa-graduation-cap"></span>
+                                    Jury E5 BTS SIO
+                                    <span class="caret"></span>
+                                </a>
+                                <ul class="dropdown-menu" role="menu">
+                                    <li class="dropdown-header dropdown-item" role="presentation">
+                                        Documentations contexte</li>
+                                    <li role="presentation" class="dropdown-item">
+                                        <a role="menuitem" href="#">Présentation</a></li>
+                                    <li role="presentation" class="dropdown-item">
+                                        <a role="menuitem" href="#">Application</a></li>
+                                    <li role="presentation" class="dropdown-item">
+                                        <a role="menuitem" href="#">Missions à réaliser</a></li>
+                                    <li role="presentation" class="dropdown-item">
+                                        <a role="menuitem" href="#">Annexes</a></li>
+                                    <li role="presentation" class="dropdown-divider"></li>
+                                    <li role="presentation" class="dropdown-header dropdown-item">
+                                        Fiches d'examen</li>
+                                    <li role="presentation" class="dropdown-item">
+                                        <a role="menuitem" href="#">Situation professionnelle n°1</a></li>
+                                    <li role="presentation" class="dropdown-item">
+                                        <a role="menuitem" href="#">Situation professionnelle n°2</a></li>
+                                    <li role="presentation" class="dropdown-divider"></li>
+                                    <li role="presentation" class="dropdown-header dropdown-item">
+                                        Démonstrations</li>
+                                    <li role="presentation" class="dropdown-item">
+                                        <a role="menuitem" href="#">Démo SP n°1</a></li>
+                                    <li role="presentation" class="dropdown-item">
+                                        <a role="menuitem" href="#">Démo SP n°2</a></li>
+                                    <li role="presentation" class="dropdown-divider"></li>
+                                    <li role="presentation" class="dropdown-header dropdown-item">
+                                        Codes sources</li>
+                                    <li role="presentation" class="dropdown-item">
+                                        <a role="menuitem" href="#">Sources SP n°1</a></li>
+                                    <li role="presentation" class="dropdown-item">
+                                        <a role="menuitem" href="#">Sources SP n°2</a></li>
+                                </ul>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#" class="nav-link"><span class="fa fa-envelope"></span>
+                                    Me contacter
+                                </a>
+                            </li>
+                        </ul>
+                </div>
+            </div>
+        </nav>
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
-    -->
-  </body>
-</html>
+
+
+
+        <nav class="navbar navbar-dark bg-dark fixed-top navbar-expand-md">
+            <div class="container">
+                <h1>Bonjour et bienvenu sur mon portfolio!</h1>
+
+                <!-- Optional JavaScript; choose one of the two! -->
+
+                <!-- Option 1: Bootstrap Bundle with Popper -->
+                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+                <!-- Option 2: Separate Popper and Bootstrap JS -->
+                <!--
+                <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+                -->
+                </body>
+                </html>
