Ajouter un pied de page Task #5 - Ajouter un pied de page

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     </div>
                 </div>
                 <hr>
-                <p class="text-center" id="copyright">© Amélia Pilou 2021</p>
+                <p class="text-center" id="copyright">© Lucas Rouzies 2023</p>
             </div>
         </footer>
 
