--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Portfolio de Lucas Rouzies - BTS SIO SLAM">
         <meta name="author" content="Lucas Rouzies">
         <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.rtl.min.css" integrity="sha384-nU14brUcp6StFntEOOEBvcJm4huWjB0OcIeQ3fltAfSmuZFrkAif0T+UtNGlKKQv" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
         <link rel="icon" href="favicon.ico">
@@ -115,9 +115,21 @@
             </div>
         </nav>
         <h1>Bonjour et bienvenu sur mon portfolio!</h1>
-        <div class="jumbotron"></div> 
-        <!-- Emplacement pour le contenu principal de la page -->
-        <img src="images/AmeliaPilou.jpg" alt="Photo de Amélie Pilou qui tien un smartphone et la montre à sa main droite"/>
+        <div class="jumbotron"> 
+            <!-- Emplacement pour le contenu principal de la page -->
+            <div class="container">
+                <div class="row">
+                    <div class="text-center">
+                        <div>
+                            <img src="images/AmeliaPilou.jpg" alt="Photo de Amélie Pilou qui tien un smartphone et la montre à sa main droite"/>
+                        </div>
+                        <div>
+                            <h1>Bonjour, je m'appelle Amélia et voici mon CV</h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <footer>
             <div class="container">
                 <div class="row">
