--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-
+        <link href="css/Styles.css" rel="stylesheet" type="text/css"/>
         <link rel="icon" href="favicon.ico">
 
         <title>Portfolio de Lucas Rouzies (BTS SIO 2023)</title>
